--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,25 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+.page-main {
+  min-height: 70vh;
+}
+.form {
+  border: 1px solid rgba(106, 104, 104, 0.1);
+  padding: 1rem;
+  margin-top: 3rem;
+  border-radius: 1rem;
+  box-shadow: -5px 5px 10px rgb(142, 139, 139);
+  width: 500px;
+  margin: 1rem auto;
 }
